--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -5,7 +5,7 @@ url: http://2017.laravelday.it
 where_when: Verona, 1 Dicembre 2017
 year: 2017
 since: 2017
-call_for_paper_url: http://cfp.phpday.it/
+call_for_paper_url: https://goo.gl/forms/UgALTZD4lmU4tEvS2
 call_for_paper: false
 talks_available: false
 schedule_available: false
