--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -2,10 +2,10 @@ name: LaravelDay
 og_image: http://2017.laravelday.it/img/confs/laravelday/logo.png
 slug: laravelday
 url: http://2017.laravelday.it
-where_when: Verona, 1 Dicembre 2017
+where_when: Verona, 30 Novembre / 1 Dicembre 2017
 year: 2017
 since: 2017
 call_for_paper_url: https://goo.gl/forms/Shqwxii7Yq3JqywK2
-call_for_paper: true
+call_for_paper: false
 talks_available: false
 schedule_available: false
