--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,6 @@
 facebook: https://www.facebook.com/laraveldayIt
 flickr:
 gplus:
-twitter: https://twitter.com/laraveldayIt
+twitter: https://twitter.com/laravelday
 vimeo: https://vimeo.com/grusp
 youtube: https://www.youtube.com/channel/UCdWnwC8nz_CCFQrmLBrLCVw
