fix demo's twitter

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -56,4 +56,4 @@ list:
     image: simone-gentili.jpg
     first_name: Simone
     last_name: Gentili
-    twitter: ennetech
+    twitter: sensorario
