--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,4 +1,4 @@
-facebook: https://www.facebook.com/laraveldayIt
+facebook: https://www.facebook.com/laravelday
 flickr:
 gplus:
 twitter: https://twitter.com/laraveldayit
