--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -46,3 +46,9 @@
   title: "Deploy di applicazioni Laravel con le pipeline di Bitbucket"
   extract: >
     "Da sempre fare il deploy di applicazioni multi-istanza rappresenta una sfida per lo sviluppatore e per il sistemista. Oggi grazie a strumenti gratuiti e un pò di esperienza in materia è possibile eseguire tale operazione lavorando su pipeline che prevedono testing automatico, validazione del code style e molto altro, in modo da ottenere una Continuous Integration consistente, efficace ed in tempi brevissimi. Scopriamo insieme come con un progetto Laravel e le pipeline di Bitbucket."
+-
+  speaker_id:
+    - danilo-costa
+  title: "Designing Virtual Reality App with Laravel Integration"
+  extract: >
+    "Nowaday, Laravel is used in an increasing number of web applications, platforms, mobile applications and web services. However, Laravel can be a great solution to implementing RESTful APIs for content management within a virtual reality application. After a short introduction, we will implement a basic VR application that uses Laravel and the recent API Resources as source for data display. Finally, we will show Coderblock as case study for Laravel integration into an online 3D VR office."
