--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -8,5 +8,5 @@ since: 2017
 call_for_paper_url: https://goo.gl/forms/Shqwxii7Yq3JqywK2
 call_for_paper: false
 talks_available: true
-schedule_available: false
+schedule_available: true
 has_workshop: true
